// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots LoginForm/Stand Alone Version Empty State 1`] = `
<section
  className="sc-gzOgki caoIvz"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <input
        className="form-control"
        id="userNameUserNameInput"
        onChange={[Function]}
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <input
        className="form-control"
        id="passwordPasswordInput"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
  </section>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    raised={true}
    type="button"
  >
    Log In
  </button>
</section>
`;

exports[`Storyshots LoginForm/Stand Alone Version Logged In 1`] = `
<section
  className="sc-gzOgki caoIvz"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "alignSelf": "center",
        "avatar": Object {
          "margin": "0 auto",
        },
        "margin": "24px",
        "phrase": Object {
          "textAlign": "center",
        },
      }
    }
  >
    <h1
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      Welcome!
    </h1>
    <p
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      Bring me back to 
      <a
        href="https://www.google.com"
      >
        Google Search
      </a>
    </p>
  </section>
  <button
    className="btn btn-primary"
    onClick={[Function]}
    raised={true}
    type="button"
  >
    Log Out
  </button>
</section>
`;

exports[`Storyshots LoginForm/Stand Alone Version Logged In But Return Route is Missing 1`] = `
<section
  className="sc-gzOgki caoIvz"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "alignSelf": "center",
        "avatar": Object {
          "margin": "0 auto",
        },
        "margin": "24px",
        "phrase": Object {
          "textAlign": "center",
        },
      }
    }
  >
    <h1
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      Welcome!
    </h1>
  </section>
  <button
    className="btn btn-primary"
    onClick={[Function]}
    raised={true}
    type="button"
  >
    Log Out
  </button>
</section>
`;

exports[`Storyshots LoginForm/Stand Alone Version Logged In But User Name is Missing 1`] = `
<section
  className="sc-gzOgki caoIvz"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "alignSelf": "center",
        "avatar": Object {
          "margin": "0 auto",
        },
        "margin": "24px",
        "phrase": Object {
          "textAlign": "center",
        },
      }
    }
  >
    <h1
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      Welcome!
    </h1>
    <p
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      Bring me back to 
      <a
        href="https://www.google.com"
      >
        Google Search
      </a>
    </p>
  </section>
  <button
    className="btn btn-primary"
    onClick={[Function]}
    raised={true}
    type="button"
  >
    Log Out
  </button>
</section>
`;

exports[`Storyshots LoginForm/Stand Alone Version Logging In 1`] = `
<section
  className="sc-gzOgki caoIvz"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <input
        className="form-control"
        id="userNameUserNameInput"
        onChange={[Function]}
        type="email"
        value="adam@gmail.com"
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <input
        className="form-control"
        id="passwordPasswordInput"
        onChange={[Function]}
        type="password"
        value="123"
      />
    </div>
  </section>
  <button
    className="btn btn-primary disabled"
    disabled={true}
    onClick={[Function]}
    raised={true}
    type="button"
  >
    Loading...
  </button>
</section>
`;

exports[`Storyshots LoginForm/Stand Alone Version Not Logged In 1`] = `
<section
  className="sc-gzOgki caoIvz"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <input
        className="form-control"
        id="userNameUserNameInput"
        onChange={[Function]}
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className=" form-control-label"
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <input
        className="form-control"
        id="passwordPasswordInput"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
  </section>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    raised={true}
    type="button"
  >
    Log In
  </button>
</section>
`;
